--- a/GAMER ADDA👑⚠💀.html
+++ b/GAMER ADDA👑⚠💀.html
@@ -2,7 +2,7 @@
 <HEAD> <LINK REL="ICON" TYPE="IMAGE/JPG" HREF="GA3.png">  
   
 </HEAD>
-<TITLE>💀GAMERS ADDA👑 </TITLE>
+<TITLE> gamer adda </TITLE>
 <BODY bgcolor="YELLOW"><CENTER><MARQUEE><IMG SRC="GA3.png" HIEGHT="200PX" WIDTH="200PX" ></MARQUEE> </CENTER> <FONT SIZE="12"> <CENTER><MARQUEE> WEB DEVELOP BY LOKESH ⚡</MARQUEE><BR>
    <BR>
     Gaming Adda isn’t just a website – it’s an experience. Here’s what you’ll find:<BR>
